--- a/Assets/nanokon2-setup/package.json
+++ b/Assets/nanokon2-setup/package.json
@@ -13,7 +13,7 @@
     ],
 
     "dependencies": {
-        "com.neuecc.unirx": "7.1.0",
+        "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
         "jp.keijiro.minis": "1.0.10",
         "com.unity.inputsystem": "1.7.0"
     },
